k8s-ssl/ingressSSL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressctl
  namespace: jd-workload
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - jaid.ddns.net
    secretName: tls-secret
  rules:
    - host: jaid.ddns.net
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /backend/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
